--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "node": "^0.10.33"
   },
   "scripts": {
-    "test-travis": ""
+    "test-travis": "",
+    "start": "node test/"
   },
   "dependencies": {
     "node-xport": ">= 0.2.0",
