--- a/package.json
+++ b/package.json
@@ -39,11 +39,11 @@
   "dependencies": {
     "node-xport": ">= 0.2.0",
     "validator": "^3.36.0",
-    "mongoose": "^3.8.12"
+    "mongoose": "~4.0.1"
   },
   "devDependencies": {
     "debug": "~0.7.2",
-    "nodemon": "~1.2.1",
+    "nodemon": "~1.3.7",
     "supertest": "~0.14.0"
   }
 }
