--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
   "dependencies": {
     "node-xport": ">= 0.2.0",
     "validator": "^3.36.0",
-    "mongoose": "~4.0.1"
+    "mongoose": "~4.0.1",
+    "mongoose-auto-increment": "~4.0.0"
   },
   "devDependencies": {
     "debug": "~0.7.2",
